--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles/styles.scss",
+              "src/styles/fonts.scss"
             ],
             "scripts": []
           },
@@ -123,6 +124,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "conferma-high-or-low"
+    }
+  },
+  "defaultProject": "conferma-high-or-low",
+  "cli": {
+    "analytics": false
+  }
 }
